--- a/index.html
+++ b/index.html
@@ -1,107 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <link>
-    <meta charset="UTF-8">
-    <title>Hello World DrPublish Plugin</title>
-    <link type="text/css" rel="stylesheet" href="styles.css"/>
-    <script type="application/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script type="application/javascript"
-            src="node_modules/@aptoma/drpublish-plugin-api/dist/jquery.postmessage.js"></script>
-    <!--<script type="application/javascript" src="node_modules/@aptoma/drpublish-plugin-api/dist/bundle.js"></script>-->
-    <script type="application/javascript" src="https://localhost/plugin-api/dist/bundle.js"></script>
-    <script type="application/javascript" src="helloworld.js?foo=bar"></script>
-</head>
-<body>
-
-
-<h1>Demo plugin</h1>
-
-<h3>JWT emitted by DrPublish</h3>
-<input id="jwt-result" />
-
-
-<h3>Fetch article id dynamically, each time a new article is loaded in the editor</h3>
-<input id="fetchArticleId-result" />
-<code>
-    function initPlugin() {
-    PluginAPI.setPluginName('helloworld');
-    // fetch article id after the article has been loaded
-    fetchArticleIdDynamically();
-    }
-    function fetchArticleIdDynamically() {
-    PluginAPI.Article.getId(function(id) {
-    console.log('stef:fetchedartid', id);
-    $('#fetchArticleId-result').val(id);
-    });
-    }
-
-</code>
-<hr/>
-
-<h3>Inject HTML text string at cursor position</h3>
-<button onclick="insertHelloWorld()">say hello</button>
-<code>PluginAPI.Editor.insertString('&lt;h3&gt;Hello World&lt;/h3&gt;');</code>
-<hr/>
-
-<h3>Read article content</h3>
-<button onclick="readContent()">do it</button>
-<textarea id="readContent-result"></textarea>
-<code>PluginAPI.Editor.getHTMLBySelector('*', function (data) {
-    $('#result-preview-txt').val(data);
-});</code>
-<hr/>
-
-<h3>Get article id</h3>
-<button onclick="getId()">do it</button>
-<input id="getId-result" />
-<code>
-PluginAPI.Article.getId(function (id) {
-    $('#getId-result').val(id);
-});</code>
-<hr/>
-
-
-<h3>Get tags</h3>
-<button onclick="getTags()">do it</button>
-<textarea id="getTags-result" ></textarea>
-<code>
-PluginAPI.Article.getTags(function (tags) {
-    $('#getTags-result').val(tags.length > 0 ? JSON.stringify(tags) : 'article has no tags');
-});</code>
-<hr/>
-
-<h3>Get categories</h3>
-<button onclick="getCategories()">do it</button>
-<textarea id="getCategories-result" ></textarea>
-<code>
-PluginAPI.Article.getSelectedCategories(function (categories) {
-
-});</code>
-<hr/>
-
-<h3>Get custom metadata (aka. "article property")</h3>
-<input placeholder="property name*" id="getCustomMeta-input" /><button onclick="getCustomMeta()">do it</button>
-<textarea id="getCustomMeta-result" ></textarea>
-<div class="hint">* If no value is provided, all available custom metadata are fetched</div>
-<code>
-PluginAPI.Article.getTags(function (tags) {
-    $('#getTags-result').val(tags.length > 0 ? JSON.stringify(tags) : 'article has no tags');
-});</code>
-<hr/>
-
-<h3>Set custom metadata (aka. "article property")</h3>
-<input placeholder="property name" id="setCustomMeta-name-input" />
-<textarea placeholder="property value" id="setCustomMeta-value-input" ></textarea>
-<button onclick="setCustomMeta()">do it</button>
-<textarea id="setCustomMeta-result" ></textarea>
-
-<code>
-    PluginAPI.Article.setCustomMeta($('#setCustomMeta-name-input').val(), $('#setCustomMeta-value-input').val(), function (data) {
-    $('#setCustomMeta-result').val(JSON.stringify(data));
-    });</code>
-<hr/>
-
-
-</body>
+<html>
+    <head>
+        <title>DrPublish example plugin</title>
+        <meta charset="utf-8"/>
+        <meta http-equiv="cache-control" content="no-store"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body>
+        <section>
+            <h1>PluginAPI.Article.getId()</h1>
+            <p>Fetches the ID of the currently edited article</p>
+            <button data-action="getId">Run</button>
+            <textarea class="target"></textarea>
+        </section>
+        <section>
+            <h1>PluginAPI.Article.getTags()</h1>
+            <p>Gets the tags currently applied to the article</p>
+            <button data-action="getTags">Run</button>
+            <textarea class="target"></textarea>
+        </section>
+        <section>
+            <h1>PluginAPI.Editor.getEditorType()</h1>
+            <p>Gets the editor type selected in 3 seconds (which allows you to move focus after clicking the button)</p>
+            <button data-action="getEditorType">Run</button>
+            <textarea class="target"></textarea>
+        </section>
+        <section>
+            <h1>PluginAPI.Article.getCurrentContent()</h1>
+            <p>Gets the entire article text contents</p>
+            <button data-action="getContent">Run</button>
+            <textarea class="target"></textarea>
+        </section>
+        <script type="module" src="js/main.js"></script>
+    </body>
 </html>
