--- a/index.html
+++ b/index.html
@@ -5,47 +5,54 @@
         <meta charset="utf-8"/>
         <meta http-equiv="cache-control" content="no-store"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="css/bootstrap-5.0.1.min.css"/>
         <link rel="stylesheet" href="css/main.css">
+        <script src="js/bootstrap-5.0.1.bundle.min.js"></script>
     </head>
     <body>
-        <section>
-            <h1>PluginAPI.Article.getId()</h1>
-            <p>Fetches the ID of the currently edited article</p>
-            <button data-action="getId">Run</button>
-            <textarea class="target"></textarea>
+        <section class="minimized">
+            <div id="search" class="input-group mb-3">
+                <input data-name="query" id="search-input" type="text" class="form-control" placeholder="Video search term"/>
+                <button data-action="search" class="btn btn-outline-primary">Search</button>
+            </div>
+            <div id="accordion"></div>
         </section>
-        <section>
-            <h1>PluginAPI.Article.getTags()</h1>
-            <p>Gets the tags currently applied to the article</p>
-            <button data-action="getTags">Run</button>
-            <textarea class="target"></textarea>
+ 
+        <section class="maximized">
+            <div id="form">
+                <div class="mb-3">
+                    <label class="form-label">Title</label>
+                    <input data-name="title" class="form-control" type="text" />
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Description</label>
+                    <textarea data-name="description" class="form-control" rows="3"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Embed code</label>
+                    <textarea data-name="embed" class="form-control" rows="3"></textarea>
+                </div>
+                <div id="preview"></div>
+                <button data-action="insert" class="btn btn-primary"><span class="update">Update</span><span class="insert">Insert</span></button>
+            </div>
         </section>
-        <section>
-            <h1>PluginAPI.Editor.getEditorType()</h1>
-            <p>Gets the editor type selected in 3 seconds (which allows you to move focus after clicking the button)</p>
-            <button data-action="getEditorType">Run</button>
-            <textarea class="target"></textarea>
-        </section>
-        <section>
-            <h1>PluginAPI.Article.getCurrentContent()</h1>
-            <p>Gets the entire article text contents</p>
-            <button data-action="getContent">Run</button>
-            <textarea class="target"></textarea>
-        </section>
-        <section>
-            <h1>PluginAPI.searchDrLib('/articles?body=')</h1>
-            <p>Search for articles in DrLib using simple text query</p>
-            <button data-action="searchDrlib">Run</button>
-            <input type="text" class="input" data-query="/articles?body="/>
-            <textarea class="target"></textarea>
-        </section>
-        <section>
-            <h1>PluginAPI.searchDrLib('/tags?name=')</h1>
-            <p>Search for articles in DrLib using simple text query</p>
-            <button data-action="searchDrlibTags">Run</button>
-            <input type="text" class="input" data-query="/tags?name="/>
-            <textarea class="target"></textarea>
-        </section>
+ 
+        <template class="accordion-item">
+            <div class="accordion-item">
+                <h4 class="accordion-header">
+                    <button class="title accordion-button collapsed"></button>
+                </h4>
+                <div class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        <p class="description"></p>
+                        <p class="button-parent">
+                            <button disabled class="edit btn btn-primary">Preview</button>
+                            <span>Click in an appropriate article field first</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </template>
         <script type="module" src="js/main.js"></script>
     </body>
 </html>
