Added example for inserting plugin elements (script asset in this case)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
 <h1>Demo plugin</h1>
 
+<h3>Insert Plugin Element</h3>
+<button onclick="insertPluginElement()">Insert new element</button>
+
 <h3>JWT emitted by DrPublish</h3>
 <input id="jwt-result" />
 
