--- a/plugin-hidden-inserter/index.html
+++ b/plugin-hidden-inserter/index.html
@@ -5,6 +5,17 @@
         <title>Hidden plugin</title>
     </head>
     <body>
-        <script type="module" src="js/main.js"></script>
+        <script type="module">
+            import { PluginAPI } from 'https://broadcast.drpublish.aptoma.no/js/shared/PluginAPI/PluginAPI-5.0.js';
+
+            const pluginName = 'plugin-hidden-example';
+            PluginAPI.setPluginName(pluginName);
+
+            const insert = (text) => {
+                PluginAPI.Editor.insertString(`<p>${text}</p>`);
+            };
+
+            PluginAPI.on('insert', insert);
+        </script>
     </body>
 </html>
